package Model;

public interface DeferredUpdateComponent {
    void reset();
    void commitChanges();
}
